# linux-package-repositories

./: README.md  test.txt
.github/: dependabot.yml
.github/ISSUE_TEMPLATE/: report-an-issue.md  report-an-issue.yml  request-a-feature.md  request-a-feature.yml
.github/scripts/: issue_data.py  requirements.txt
.github/workflows/: ci.yml  issue_sync.yml  lint.yml  lock.yml  repoaudit.yml  zizmor.yml
repoaudit/: README.md  pyproject.toml  setup.cfg  setup.py
repoaudit/repoaudit/: __init__.py  apt.py  utils.py  yum.py
