[tool.poetry]
name = "repoaudit"
version = "0.2.1"
description = "CLI to validate yum/apt repositories"
authors = []
readme = "README.md"

[tool.poetry.scripts]
repoaudit = "repoaudit:main"

[tool.poetry.dependencies]
python = "^3.9"
click = "^8.1.3"
python-debian = "^0.1.44"
requests = "^2.28.1"
python-gnupg = "^0.4.9"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
flake8 = "^4.0.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
